# book-generator

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  docker-compose.yml  package.json  plan.md
backend/: CLAUDE.md  ISSUES_POST_MERGE.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  chapters.py  export.py  markdown.py  preview.py  projects.py  templates.py  websocket.py
backend/app/core/: config.py  database.py  pdf_config.py  storage.py
backend/app/models/: __init__.py  chapter.py  project.py
backend/app/services/: __init__.py  advanced_css_templates.py  chapter.py  chapter_service.py  markdown_processor.py  multi_format_exporter.py  pdf_generator.py  project.py  project_service.py  template_service.py
backend/app/templates/: academic.html  book.html  novel.html
backend/app/templates/css/: academic.css  book.css  novel.css
backend/app/validators/: __init__.py  chapter.py  export.py  project.py
backend/app/websocket/: __init__.py  preview_manager.py
backend/storage/fonts/: fonts.css
backend/storage/templates/: academic.css  roman.css  technical.css
backend/tests/: conftest.py  test_advanced_css_templates.py  test_api_chapters.py  test_api_projects.py  test_export.py  test_infrastructure.py  test_markdown_processor.py  test_multi_format_export.py  test_pdf_pagination.py  test_template_service.py  test_templates_api.py  test_websocket.py
docker/: CLAUDE.md  Dockerfile.backend  Dockerfile.frontend
frontend/: .prettierrc  CLAUDE.md  index.html  package-lock.json  package.json  (+4 more)
(+37 files in other folders)
